Fixed dynamic text on smaller screens

--- a/src/components/header/Header.module.sass
+++ b/src/components/header/Header.module.sass
@@ -38,14 +38,15 @@
 
 @media (max-width: 992px)
     .headerContainer
-        padding-left: 25px
-        padding-right: 25px
+        padding-inline: 25px
         
 @media (max-width: 768px)
     .headerContainer
         .content
             h1
                 font-size: 24px
+                .dynamicText
+                    padding-block: 0px
             span
                 font-size: 26px
             button
